--- a/client/package.json
+++ b/client/package.json
@@ -13,19 +13,25 @@
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "@reduxjs/toolkit": "^1.9.7",
     "@types/react": "^18.2.28",
     "@types/react-native": "^0.72.3",
     "expo": "~49.0.13",
+    "expo-image-picker": "^14.5.0",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "react-native": "0.72.5",
+    "react-native-image-crop-picker": "^0.40.0",
     "react-native-image-picker": "^7.0.1",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-web": "~0.19.6",
-    "typescript": "^5.2.2"
+    "redux": "^4.2.1",
+    "typescript": "^5.2.2",
+    "with-rn-image-crop-picker": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
