--- a/client/app.json
+++ b/client/app.json
@@ -1,11 +1,6 @@
 {
   "expo": {
-    "plugins": [
-      "expo-image-picker",
-      {
-        "photosPermission": "The app accesses your photos to let you share them with your friends."
-      }
-    ],
+ 
     "name": "threads",
     "slug": "threads",
     "version": "1.0.0",
@@ -34,3 +29,10 @@
     }
   }
 }
+
+   // "plugins": [
+    //   "expo-image-picker",
+    //   {
+    //     "photosPermission": "The app accesses your photos to let you share them with your friends."
+    //   }
+    // ],
