--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@types/react": "^18.2.28",
     "@types/react-native": "^0.72.3",
+    "axios": "^1.5.1",
     "expo": "~49.0.13",
     "expo-image-picker": "^14.5.0",
     "expo-status-bar": "~1.6.0",
@@ -29,6 +30,7 @@
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-web": "~0.19.6",
+    "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "typescript": "^5.2.2",
     "with-rn-image-crop-picker": "^0.2.0"
