--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "expo": "~49.0.13",
     "expo-image-picker": "^14.5.0",
     "expo-status-bar": "~1.6.0",
+    "native-base": "^3.4.28",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
