--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "expo": "~49.0.13",
     "expo-image-picker": "^14.5.0",
     "expo-status-bar": "~1.6.0",
+    "moment": "^2.29.4",
     "native-base": "^3.4.28",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -31,6 +32,7 @@
     "react-native-image-picker": "^7.0.1",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-svg": "^14.0.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
